--- a/index.html
+++ b/index.html
@@ -16,7 +16,6 @@
     <title>Sammy Bernstein</title>
     <!--Link to CSS file-->
     <link rel="stylesheet" href="style.css">
-    <script src="hello.js"></script>
 </head>
 
 <body>
@@ -47,7 +46,8 @@
         <p><a href="mailto:sam2304803@maricopa.edu">Email</a></p>
     </footer>
 
-    <!--Link to JavaScript file-->
+    <!--Link to JavaScript files-->
     <script src="main.js"></script>
+    <script src="hello.js"></script>
 </body>
 </html>
