--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <!--
 
     CIS166AA: Introduction to JavaScript
-    Project 4
+    Project 1
 
     Author: Sammy Bernstein
-    Date:   April 18, 2024
+    Date:   March 28, 2024
 
 -->
 
@@ -13,8 +13,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Project 4: JavaScript Calculator</title>
-    <!--Link to CSS File-->
+    <title>Sammy Bernstein</title>
+    <!--Link to CSS file-->
     <link rel="stylesheet" href="style.css">
 </head>
 
@@ -24,7 +24,11 @@
         <nav class="horizontalNavigation">
             <ul>
                <li><a href="index.html">Home</a></li>
+               <li><a href="about.html">About</a></li>
                <li><a href="calculator.html">JS Calculator</a></li>
+               <li><a href="number-game-errors.html">Number Game</a></li>
+               <li><a href="courses.html">Courses</a></li>
+               <li><a href="contact.html">Contact</a></li>
             </ul>
          </nav>
     </header>
@@ -32,12 +36,19 @@
     <!--Begin Main Content-->
     <main>
         <h1>
-            JavaScript Calculator Project
+            Web Development at Mesa Community College
         </h1>
+        <p class="descriptor">
+            The website will highlight the work I have completed thus far at Mesa Community College for my Certificate of Completion (CCL) in Web App Development. The website will serve as a resource for the user to see my educational journey, from the very first courses I completed, all the way up to the projects for this current course.
+        </p>
     </main>
+
+    <!--Begin Footer-->
+    <footer>
+        <p><a href="mailto:sam2304803@maricopa.edu">Email</a></p>
+    </footer>
 
     <!--Link to JavaScript file-->
     <script src="main.js"></script>
-    <script src="calc.js"></script>
 </body>
 </html>
