--- a/calculator.html
+++ b/calculator.html
@@ -23,7 +23,11 @@
         <nav class="horizontalNavigation">
             <ul>
                <li><a href="index.html">Home</a></li>
+               <li><a href="about.html">About</a></li>
                <li><a href="calculator.html">JS Calculator</a></li>
+               <li><a href="number-game-errors.html">Number Game</a></li>
+               <li><a href="courses.html">Courses</a></li>
+               <li><a href="contact.html">Contact</a></li>
             </ul>
          </nav>
     </header>
