--- a/index.html
+++ b/index.html
@@ -1,54 +1,31 @@
-<!--
-
-    CIS166AA: Introduction to JavaScript
-    Project 4
-
-    Author: Sammy Bernstein
-    Date:   April 18, 2024
-
--->
-
 <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
+<html lang="en-us">
+  <head>
+    <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Sammy Bernstein</title>
-    <!--Link to CSS file-->
+
+    <title>Arizona Image Gallery Example</title>
+
     <link rel="stylesheet" href="style.css">
-</head>
+    
+  </head>
 
-<body>
-    <!--Begin Navigation Links-->
-    <header>
-        <nav class="horizontalNavigation">
-            <ul>
-               <li><a href="index.html">Home</a></li>
-               <li><a href="about.html">About</a></li>
-               <li><a href="calculator.html">JS Calculator</a></li>
-               <li><a href="number-game-errors.html">Number Game</a></li>
-               <li><a href="courses.html">Courses</a></li>
-               <li><a href="contact.html">Contact</a></li>
-            </ul>
-         </nav>
-    </header>
+  <body>
+    <h1>Arizona Image Gallery Example</h1>
 
-    <!--Begin Main Content-->
-    <main>
-        <h1>
-            Web Development at Mesa Community College
-        </h1>
-        <p class="descriptor">
-            The website will highlight the work I have completed thus far at Mesa Community College for my Certificate of Completion (CCL) in Web App Development. The website will serve as a resource for the user to see my educational journey, from the very first courses I completed, all the way up to the projects for this current course.
-        </p>
-    </main>
+    <div class="full-img">
+      <img 
+        class="displayed-img" 
+        src="images/pic1.jpg" 
+        alt="Aerial View of the Horseshoe Bend">
+      <div class="overlay"></div>
+      <button class="dark" type="button">Darken</button>
+    </div>
 
-    <!--Begin Footer-->
-    <footer>
-        <p><a href="mailto:sam2304803@maricopa.edu">Email</a></p>
-    </footer>
+    <div class="thumb-bar">
 
-    <!--Link to JavaScript file-->
+
+    </div>
     <script src="main.js"></script>
-</body>
+  </body>
 </html>
